--- a/public/css/dialecto.css
+++ b/public/css/dialecto.css
@@ -1168,3 +1168,17 @@ body {
     border-radius: 10px;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
+
+.quiz-cont {
+    border-radius: 10px;
+    padding-top: 20px;
+    border: 1px solid #CB9219;
+    /* Thinner border */
+}
+
+.selected {
+    background-color: #007bff;
+    /* Change to your desired color */
+    color: #fff;
+    /* Text color */
+}
