--- a/public/css/dialecto.css
+++ b/public/css/dialecto.css
@@ -1032,8 +1032,8 @@ body {
 
 .image-thumbnail {
     width: 100%;
-    max-width: 450px;
-    height: auto;
+    /* max-width: 450px; */
+    height: 100%;
     object-fit: cover;
 }
 
