--- a/public/css/dialecto.css
+++ b/public/css/dialecto.css
@@ -1193,3 +1193,21 @@ body {
 
     /* Optional: to add some padding inside the column */
 }
+
+
+.wordBankCard {
+
+    border-radius: 10px;
+
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+
+
+    width: 300px;
+
+    height: 200px;
+
+    margin-right: 15px;
+    margin-bottom: 15px;
+
+}
