--- a/public/css/dialecto.css
+++ b/public/css/dialecto.css
@@ -886,7 +886,7 @@ body {
 
 .top {
 
-    padding-bottom: 15px;
+    /* padding-bottom: 15px; */
 
     background-color: white;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
