added css for the dictionary highlight

--- a/public/css/dialecto.css
+++ b/public/css/dialecto.css
@@ -795,7 +795,12 @@ body {
 }
 
 
-
+mark {
+    background-color: #FFCA58; /* coral red */
+    color: black; /* white text */
+    padding: 2px 4px;
+    border-radius: 4px;
+}
 
 
 
