--- a/public/css/dialecto.css
+++ b/public/css/dialecto.css
@@ -1232,3 +1232,51 @@ mark {
     margin-bottom: 15px;
 
 }
+
+
+
+/* modal for remarks */
+
+/* Modal Background */
+#customDisapproveModal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Modal Content */
+.modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    width: 400px;
+    position: relative;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+/* Form Elements */
+.modal-content textarea {
+    width: 100%;
+    padding: 5px;
+    margin-top: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.btn-gray {
+    background-color: gray;
+    color: white;
+    /* padding: 10px; */
+    /* border: none; */
+    cursor: pointer;
+}
+
+/* Buttons */
