--- a/public/css/dialecto.css
+++ b/public/css/dialecto.css
@@ -1253,7 +1253,7 @@ mark {
 }
 
 /* Modal Content */
-.modal-content {
+.modal-content2 {
     background: white;
     padding: 20px;
     border-radius: 5px;
@@ -1263,7 +1263,7 @@ mark {
 }
 
 /* Form Elements */
-.modal-content textarea {
+.modal-content2 textarea {
     width: 100%;
     padding: 5px;
     margin-top: 10px;
